# pthread

./: .bazelrc  BUILD.bazel  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-pthread  bazel-testlogs  main.cc
.github/workflows/: build.yml
