load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")

maybe(
    http_archive,
    name = "rules_foreign_cc",
    sha256 = "6041f1374ff32ba711564374ad8e007aef77f71561a7ce784123b9b4b88614fc",
    strip_prefix = "rules_foreign_cc-0.8.0",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0.8.0.tar.gz",
)

maybe(
    git_repository,
    name = "com_github_3rdparty_bazel_rules_backward_cpp",
    commit = "be06f4fce52e2327d877493d050f42b9d082af3f",
    remote = "https://github.com/3rdparty/bazel-rules-backward-cpp",
    shallow_since = "1658132298 +0300",
)

maybe(
    new_git_repository,
    name = "com_github_3rdparty_bazel_rules_backward_cpp_stacktrace",
    build_file = "@com_github_3rdparty_bazel_rules_backward_cpp//:BUILD.backward-stacktrace.bazel",
    commit = "be06f4fce52e2327d877493d050f42b9d082af3f",
    remote = "https://github.com/3rdparty/bazel-rules-backward-cpp",
    shallow_since = "1658132298 +0300",
)

load("@com_github_3rdparty_bazel_rules_backward_cpp//bazel:deps.bzl", backward_deps = "deps")

backward_deps()
